--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <!--activity page here-->
+        <!--Registering Intent -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!--activity page here-->
-        <activity android:name=".BookDetails" />
+        <activity android:name=".BookDetails"></activity>
         <activity android:name=".EditPage"></activity>
     </application>
 
